differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr63304_1.c-4.8.2-2.out.txt
pr63304_1.c:4:9: error: attribute(target("+nothing+simd")) is unknown
 #pragma GCC target ("+nothing+simd, cmodel=small")
         ^
pr63304_1.c:4:9: error: attribute(target(" cmodel=small")) is unknown
pr63304_1.c:8:1: error: attribute(target("+nothing+simd")) is unknown
 {
 ^
pr63304_1.c:8:1: error: attribute(target(" cmodel=small")) is unknown
pr63304_1.c:19:9: error: attribute(target("cmodel=large")) is unknown
 #pragma GCC target ("cmodel=large")
         ^
pr63304_1.c:23:1: error: attribute(target("cmodel=large")) is unknown
 {
 ^
pr63304_1.c:37:1: error: attribute(target("+nothing+simd")) is unknown
 {
 ^
pr63304_1.c:37:1: error: attribute(target(" cmodel=small")) is unknown
